--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pymongo = {extras = ["srv", "tls"], version = "^4.5.0"}
 mongoengine = "^0.27.0"
 redis = "^5.0.1"
 redis-lru = "^0.1.2"
+pika = "^1.3.2"
+faker = "^19.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
